--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -34,7 +34,9 @@
             android:defaultValue="@null" />
         <action
             android:id="@+id/actionToDisplayFragment"
-            app:destination="@id/displayFragment" />
+            app:destination="@id/displayFragment"
+            app:popUpTo="@+id/nav_graph"
+            app:popUpToInclusive="true"/>
     </fragment>
     <fragment
         android:id="@+id/permissions_fragment"
