--- a/app/src/main/res/layout/display_grid_item.xml
+++ b/app/src/main/res/layout/display_grid_item.xml
@@ -12,7 +12,8 @@
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp"
+        android:padding="@dimen/_8sdp"
+        android:layout_margin="@dimen/_8sdp"
         android:clickable="true"
         android:focusable="true"
         android:background="@drawable/grid_item_background">
@@ -20,17 +21,16 @@
 
 
         <ImageView
-            android:id="@+id/monsterImage"
+
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_margin="8dp"
+
             android:scaleType="centerCrop"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:contentDescription="Mingle"
-            tools:ignore="HardcodedText"
             imageUrl="@{viewModel}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
